--- a/menu_bar.html
+++ b/menu_bar.html
@@ -67,7 +67,7 @@
       menu[category].forEach(item => {
         const div = document.createElement("div");
         div.className = "item";
-        div.innerHTML = `<span>${item.name}</span><span class="price">${item.price}</span>`;
+        div.innerHTML = `<span><strong>${item.name}</strong><br><small>${item.desc || ''}</small></span><span class="price">${item.price || ''}</span>`;
         section.appendChild(div);
       });
 
