--- a/menu_bar.html
+++ b/menu_bar.html
@@ -78,7 +78,7 @@
 <body>
 
   <div class="header">
-    <img src="III_Army_Corps_(Greece_flag).png" alt="Logo" />
+    <img src="https://kaay-neas-fokaias.github.io/menus/III_Army_Corps_(Greece_flag).png" alt="Logo" />
     <h1>KAAY Bar Menu</h1>
   </div>
 
