--- a/menu_bar.html
+++ b/menu_bar.html
@@ -16,7 +16,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background-color: #003366;
+      background-color: #784b9c;;
       color: white;
       padding: 0.5rem 1rem;
       position: sticky;
@@ -25,7 +25,7 @@
     }
 
     .header img {
-      height: 40px;
+      height: 115px;
       margin-right: 1rem;
     }
 
