--- a/menu_bar.html
+++ b/menu_bar.html
@@ -79,7 +79,7 @@
 
   <div class="header">
     <img src="https://kaay-neas-fokaias.github.io/menus/III_Army_Corps_(Greece_flag).png" alt="Logo" />
-    <h1>KAAY Bar Menu</h1>
+    <h1>Bar Menu</h1>
   </div>
 
   <div class="container" id="menuOutput"></div>
